[tool.poetry]
name = "latentCCM"
version = "0.1.0"
description = ""
authors = ["Edward De Brouwer <edward.debrouwer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
torch = "^1.7.1"
pandas = "^1.2.3"
skCCM = "^0.2.dev"
scikit-learn = "^0.24.1"
tqdm = "^4.59.0"
torchdiffeq = "^0.2.1"
ipython = "^7.21.0"
ipdb = "^0.13.6"
matplotlib = "^3.3.4"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
